# F.I.N.D

./: .cookiecutter.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  coverage.xml  eolt_root_cause_analyser.exe.spec  noxfile.py  pyproject.toml  pytest.xml  toplevel.py
Sample TDMS files/: 114_Cogging.tdms  23918_High_Speed_20140.tdms_index  35997_Cogging_34641.tdms  418_High_Speed_320.tdms  418_High_Speed_320.tdms_index  470_High_Torque_43.tdms  706_High_Speed_444.tdms_index
ci_files/: constraints.txt
docs/source/: conf.py  index.rst
eolt_root_cause_analyser/: __init__.py  __main__.py  begin_test.py  class_setup.py  cli.py  initial_plots.py  logic_toplevel.py  results.py  rps.py  sql_fetch.py  tdms_fetch.py
eolt_root_cause_analyser/data_analysis/: data_analysis.py
eolt_root_cause_analyser/data_processing/: data_processing.py
eolt_root_cause_analyser/fetching/: data_trimming.py  sql_fetch.py  tdms_fetch.py
eolt_root_cause_analyser/rps/: rps_order_checker.py  rps_short_checker.py  rps_static_checker.py  rps_toplevel.py  rps_zero_checker.py
tests/: __init__.py  test_main.py
